Added GitHub Link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
      <div class="socialmedia">
         <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
         <a href=""><img src="webicons/mastodon.png"></a>
+        <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
      </div>
 
   </div>
