-Sticked social links to the ground. -changed contact email. -changed margins and image size.

--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Personal Website</title>
-  <link href="../css/style.css" rel="stylesheet" />
+  <title>mawacode.de</title>  <link href="../css/style.css" rel="stylesheet" />
 </head>
 
 <body>
