--- a/contactme.html
+++ b/contactme.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Personal Website</title>
+  <title>mawacode.de</title>  
   <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-1">
          <h1>Kontakt</h1>
-         <h2>Email: mawacode [at] proton.me</h2>
+         <h2>Email: malik.wachter [at] mawacode.de</h2>
       </div>
       <div class="col-2">
         <img src="pics/emails.png" class="fotovonmir">
