Fixed Responsive Design for Mobile

--- a/contactme.html
+++ b/contactme.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mawacode.de</title>  
+  <title>mawacode.de</title>
   <link href="css/style.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
