Added content to /aboutme/linux.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,9 +33,9 @@
           <h2>Zu guter Letzt. Ich liebe Katzen und habe sogar zwei von diesen Spinnern.</h2>
 
           <ul id="aboutmelinks">
-            <li><a href="aboutme/cats.html">Meine Katzen</a></li>
-            <li><a href="aboutme/linux.html">Meine Linux Distro</a></li>
-            <li><a href="aboutme/techno.html">Top 10 Techno Lieder</a></li>
+            <li><a href="aboutme/cats.html">Katzen</a></li>
+            <li><a href="aboutme/linux.html">Linux</a></li>
+            <li><a href="aboutme/techno.html">Top 10 Techno</a></li>
           </ul>
       </div>
       <div class="col-2">
@@ -43,10 +43,10 @@
       </div>
      </div>
 
-          <div class="socialmedia">
-        <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
-        <a href=""><img src="webicons/mastodon.png"></a>
-        <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
+     <div class="socialmedia">
+      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
+      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
+      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
      </div>
 
   </div>
