--- a/aboutme/linux.html
+++ b/aboutme/linux.html
@@ -27,20 +27,44 @@
     <div class="row">
       <div class="col-1">
          <h1>Linux</h1>
-         <h2>Desktop: Nobara Linux (Siehe Bild 1)</h2>
-         <h2>Laptop: Fedora Linux (Siehe Bild 2)</h2>
-         <h2>Meine gesamte Distrohop geschichte ist in Bild 3 einsehbar.</h2>
 
+         <h2>Meine Linux distrohop Geschichte:</h2>
+         <ul class="technolist">
+          <li>2021 Januar - Linux Mint</li>
+          <li>2021 Juni - Kubuntu</li>
+          <li>2021 Juli - KDE Neon</li>
+          <li>2022 Februar - Fedora</li>
+          <li>2022 Juni - Nobara</li>
+          <li>Aktuell Fedora und Nobara</li>
+         </ul>
+         <p>‎ </p>
+         <h2>Desktop: Nobara Linux</h2>
+         <img src="../pics/linuxdesktop.png" class="neofetch">
+         <h2>Laptop: Fedora Linux</h2>
+         <img src="../pics/linuxlaptop.png" class="neofetch">
+         <p>‎ </p>
+         <h2>Distros mit dennen ich nurmal rumgespielt habe:</h2>
+         <ul class="technolist">
+          <li>Arch Linux</li>
+          <li>Artix Linux</li>
+          <li>AntiX</li>
+          <li>TailsOS</li>
+         </ul>
+         <h2>Weitere Linux Geräte in meinem Besitz:</h2>
+         <ul class="technolist">
+          <li>Raspberry Pi - Rasberry Pi OS</li>
+          <li>Steam Deck - SteamOS</li>
+          <li>Fairphone 3+ - iodéOS</li>
+         </ul>
       </div>
       <div class="col-2">
-        <img src="../webicons/foto.png" class="fotovonmir">
       </div>
      </div>
 
      <div class="socialmedia">
-        <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
-        <a href=""><img src="../webicons/mastodon.png"></a>
-        <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
+      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
+      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
+      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
      </div>
 
   </div>
