--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -26,7 +26,7 @@
 
     <div class="row">
       <div class="col-1">
-         <h1>Techno top 10</h1>
+         <h1>Techno Top 10</h1>
          <h2>Vorab: Diese Top-10-Liste ist nicht ernst gemeint. Es wurde nach keinen Kriterien bewertet. Das ist nur eine Sammlung von Liedern, die ich aktuell gerne höre.</h2>
          <ul class="technolist">
           <li>1. i wanna be your girlfriend | Dj Brice</li>
@@ -49,7 +49,7 @@
 
      <div class="socialmedia">
         <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
-        <a href=""><img src="../webicons/mastodon.png"></a>
+        <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
         <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
      </div>
 
