--- a/contactme.html
+++ b/contactme.html
@@ -34,10 +34,10 @@
       </div>
      </div>
 
-          <div class="socialmedia">
-        <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
-        <a href=""><img src="webicons/mastodon.png"></a>
-        <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
+     <div class="socialmedia">
+      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
+      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
+      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
      </div>
 
   </div>
