fixed type (again)

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
          <h1>Über mich:</h1>
          <h2>Hey, ich weiß selbst nach fast zwei Jahrzehnten auf diesem Planeten nicht genau, was ich über mich schreiben soll in solchen „Über Mich“s. Aber ich versuche es mal. :)</h2>
          <p>‎ </p>
-          <h2>Also ich interessiere mich sehr für alles rund um Computer. Ich nutze Linux und lerne gerade programmieren. Abseits vom Computer, treffe ich mich gerne mit Freunden und höre sehr viel Musik. In letzter Zeit höre ich überwiegend Techno, daher gehe ich auch mega gerne regelmäßig in Technoclubs. </h2>
+          <h2>Also ich interessiere mich sehr für alles rund um Computer. Ich nutze Linux und lerne gerade programmieren. Abseits vom Computer treffe ich mich gerne mit Freunden und höre sehr viel Musik. In letzter Zeit höre ich überwiegend Techno, daher gehe ich auch mega gerne regelmäßig in Technoclubs. </h2>
           <p>‎ </p>
           <h2>Zu guter Letzt. Ich liebe Katzen und habe sogar zwei von diesen Spinnern.</h2>
 
