added source for xkcd commic

--- a/contactme.html
+++ b/contactme.html
@@ -30,7 +30,7 @@
          <h2>Email: malik.wachter [at] mawacode.de</h2>
       </div>
       <div class="col-2">
-        <img src="pics/emails.png" class="fotovonmir">
+        <a href="https://xkcd.com/1783/"><img src="pics/emails.png" class="comic"></a>
       </div>
      </div>
 
