--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
+      <a href="#ger"><img src="webicons/ger.png" id="lang"></a>
     </div>
 
     <div class="row">
@@ -37,9 +38,9 @@
      </div>
 
      <div class="socialmedia">
-      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
-      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
-      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
+      <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
+      <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
+      <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
      </div>
 
   </div>
