--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,9 @@
      </div>
 
      <div class="socialmedia">
-      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
-      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
-      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
+      <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
+      <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
+      <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
      </div>
 
   </div>
