--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+
   <div class="container">
     <div class="navbar">
       <img src="webicons/logo.png" class="logo">
@@ -22,15 +23,13 @@
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
-      <a href="#ger"><img src="webicons/ger.png" id="lang"></a>
+      <a href="#ger" data-reload><img src="webicons/ger.png" id="lang"></a>
     </div>
 
     <div class="row">
       <div class="col-1">
-         <h1>Hallo Internet!</h1>
-         <h2>Ich bin Malik, irgend so ein Typ im Web, der gerade Programmieren lernt.</h2>
-         <p>‎ </p>
-         <h2>Willkommen auf meiner persönlichen Webseite. Hier erfährst du mehr über mich und meine Projekte! Danke fürs Vorbeischauen. :)</h2>
+         <h1 id="welcometitle">Hello Internet!</h1>
+         <h2 id="welcome">I'm Malik, some guy on the web who's learning to code. Welcome to my personal website. Here you can find out more about me and my projects! Thanks for stopping by. :)</h2>
       </div>
       <div class="col-2">
         <img src="webicons/foto.png" class="fotovonmir">
@@ -65,6 +64,8 @@
       }
 
     </script>
+
+    <script src="js/lang.js"></script>
 
 </body>
 
