--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
-      <a href="#ger" data-reload><img src="webicons/ger.png" id="lang"></a>
+      <a href="#ger" data-reload><img src="webicons/ger.png" id="lang" onclick="reload()"></a>
     </div>
 
     <div class="row">
