--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
     <div class="row">
       <div class="col-1">
-         <h1 id="welcometitle">Hello Internet!</h1>
-         <h2 id="welcome">I'm Malik, some guy on the web who's learning to code. Welcome to my personal website. Here you can find out more about me and my projects! Thanks for stopping by. :)</h2>
+         <h1 id="welcometitle"></h1>
+         <h2 id="welcome1">I'm Malik, some guy on the web who's learning to code.</h2>
+         <p>‎ </p>
+         <h2 id="welcome2">Welcome to my personal website. Here you can find out more about me and my projects! Thanks for stopping by. :)</h2>
       </div>
       <div class="col-2">
         <img src="webicons/foto.png" class="fotovonmir">
