Add working Translation (half)

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <img src="webicons/logo.png" class="logo">
       <nav>
         <ul id="menuList">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contactme.html">Contact Me</a></li>
+          <li><a href="index.html" id="homenav"></a></li>
+          <li><a href="aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="projects.html" id="projectsnav"></a></li>
+          <li><a href="contactme.html" id="contactnav"></a></li>
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
@@ -29,9 +29,9 @@
     <div class="row">
       <div class="col-1">
          <h1 id="welcometitle"></h1>
-         <h2 id="welcome1">I'm Malik, some guy on the web who's learning to code.</h2>
-         <p>‎ </p>
-         <h2 id="welcome2">Welcome to my personal website. Here you can find out more about me and my projects! Thanks for stopping by. :)</h2>
+         <h2 id="welcome1"></h2>
+         <p>‎</p>
+         <h2 id="welcome2"></h2>
       </div>
       <div class="col-2">
         <img src="webicons/foto.png" class="fotovonmir">
