Add check if homepage to fix missing text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="row">
       <div class="col-1">
-         <h1 id="welcometitle"></h1>
+         <h1 id="welcometitle">Hello Internet!</h1>
          <h2 id="welcome1"></h2>
          <p>‎</p>
          <h2 id="welcome2"></h2>
