--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -15,30 +15,31 @@
       <img src="../webicons/logo.png" class="logo">
       <nav>
         <ul id="menuList">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../aboutme.html">About Me</a></li>
-          <li><a href="../projects.html">Projects</a></li>
-          <li><a href="../contactme.html">Contact Me</a></li>
+          <li><a href="../index.html" id="homenav"></a></li>
+          <li><a href="../aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="../projects.html" id="projectsnav"></a></li>
+          <li><a href="../contactme.html" id="contactnav"></a></li>
         </ul>
       </nav>
       <img src="../webicons/menu.png" class="menu-icon" onclick="togglemenu()">
+      <img src="../webicons/ger.png" id="lang" onclick="langChange()">
     </div>
 
     <div class="row">
       <div class="col-1">
-         <h1>Techno Top 10</h1>
-         <h2>Vorab: Diese Top-10-Liste ist nicht ernst gemeint. Es wurde nach keinen Kriterien bewertet. Das ist nur eine Sammlung von Liedern, die ich aktuell gerne höre.</h2>
+         <h1 id="technotitle"></h1>
+         <h2 id="techno"></h2>
          <ul class="technolist">
-          <li>1. i wanna be your girlfriend | Dj Brice</li>
-          <li>2. DIE LIEBE KOMMT NICHT AUS BERLIN | Brutalismus 3000</li>
-          <li>3. HEISS (Floorkiller Flex) | ÅMRTÜM</li>
-          <li>4. Underground | Tucker</li>
-          <li>5. Audio Bully - Original | ANSBRO</li>
-          <li>6. Goes Crazy - Original Mix | RBX</li>
-          <li>7. As We Kick | RVLT, Ouija</li>
-          <li>8. Language Of The Devil | Infeed</li>
-          <li>9. NUR MEIN KÖRPER UND DIE ANGST | Brutalismus 3000</li>
-          <li>10. Atme Ein (Atme Rauch aus) | Butschi, Felix Jaehn, Fairy Mary</li>
+          <li id="technoli1"></li>
+          <li id="technoli2"></li>
+          <li id="technoli3"></li>
+          <li id="technoli4"></li>
+          <li id="technoli5"></li>
+          <li id="technoli6"></li>
+          <li id="technoli7"></li>
+          <li id="technoli8"></li>
+          <li id="technoli9"></li>
+          <li id="technoli10"></li>
          </ul>
 
       </div>
@@ -75,6 +76,9 @@
       }
 
     </script>
+
+<script src="../js/lang.js"></script>
+
 
 </body>
 
