Changes on button to change langauge

--- a/aboutme/cats.html
+++ b/aboutme/cats.html
@@ -19,10 +19,10 @@
           <li><a href="../aboutme.html" id="aboutmenav"></a></li>
           <li><a href="../projects.html" id="projectsnav"></a></li>
           <li><a href="../contactme.html" id="contactnav"></a></li>
+          <li><a onclick="langChange()" id="lang"></a></li>
         </ul>
       </nav>
       <img src="../webicons/menu.png" class="menu-icon" onclick="togglemenu()">
-      <img src="../webicons/ger.png" id="lang" onclick="langChange()">
     </div>
 
     <div class="row">
