--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="row">
       <div class="col-1">
-         <h1 id="welcometitle">Hello Internet!</h1>
+         <h1 id="welcometitle">Looks like you have JavaScript deactivated. Please activate JavaScript. My entire JavaScript is Open-Source btw. https://github.com/malikwachter/mawacode.de/blob/main/js/lang.js</h1>
          <h2 id="welcome1"></h2>
          <p>‎</p>
          <h2 id="welcome2"></h2>
