Change nav style

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
       <nav>
         <ul id="menuList">
           <li><a href="index.html" id="homenav"></a></li>
-          <li><a href="aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="aboutme.html" id="aboutmenav" class="activeTab"></a></li>
           <li><a href="projects.html" id="projectsnav"></a></li>
           <li><a href="contactme.html" id="contactnav"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
@@ -23,27 +23,27 @@
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
+    <div class="content">
+      <div class="row">
+        <div class="col-1">
+            <h1 id="aboutmetitle"></h1>
+            <h2 id="aboutme1"></h2>
+            <p>‎</p>
+            <h2 id="aboutme2"></h2>
+            <p>‎</p>
+            <h2 id="aboutme3"></h2>
 
-    <div class="row">
-      <div class="col-1">
-          <h1 id="aboutmetitle"></h1>
-          <h2 id="aboutme1"></h2>
-          <p>‎</p>
-          <h2 id="aboutme2"></h2>
-          <p>‎</p>
-          <h2 id="aboutme3"></h2>
-
-          <ul id="aboutmelinks">
-            <li><a href="aboutme/cats.html" id="aboutmebutton1"></a></li>
-            <li><a href="aboutme/linux.html" id="aboutmebutton2"></a></li>
-            <li><a href="aboutme/techno.html" id="aboutmebutton3"></a></li>
-          </ul>
-      </div>
-      <div class="col-2">
-        <img src="webicons/foto.png" class="fotovonmir">
+            <ul id="aboutmelinks">
+              <li><a href="aboutme/cats.html" id="aboutmebutton1"></a></li>
+              <li><a href="aboutme/linux.html" id="aboutmebutton2"></a></li>
+              <li><a href="aboutme/techno.html" id="aboutmebutton3"></a></li>
+            </ul>
+        </div>
+        <div class="col-2">
+          <img src="webicons/foto.png" class="fotovonmir">
+        </div>
       </div>
     </div>
-
     <div class="socialmedia">
       <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
       <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
