--- a/aboutme/linux.html
+++ b/aboutme/linux.html
@@ -16,7 +16,7 @@
       <nav>
         <ul id="menuList">
           <li><a href="../index.html" id="homenav"></a></li>
-          <li><a href="../aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="../aboutme.html" id="aboutmenav" class="activeTab"></a></li>
           <li><a href="../projects.html" id="projectsnav"></a></li>
           <li><a href="../contactme.html" id="contactnav"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
@@ -24,7 +24,7 @@
       </nav>
       <img src="../webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
-
+    <div class="content">
     <div class="row">
       <div class="col-1">
          <h1 id="linuxtitle"></h1>
