--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -16,7 +16,7 @@
       <nav>
         <ul id="menuList">
           <li><a href="../index.html" id="homenav"></a></li>
-          <li><a href="../aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="../aboutme.html" id="aboutmenav" class="activeTab"></a></li>
           <li><a href="../projects.html" id="projectsnav"></a></li>
           <li><a href="../contactme.html" id="contactnav"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
@@ -24,30 +24,30 @@
       </nav>
       <img src="../webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
+    <div class="content">
+      <div class="row">
+        <div class="col-1">
+          <h1 id="technotitle"></h1>
+          <h2 id="techno"></h2>
+          <ul class="technolist">
+            <li id="technoli1"></li>
+            <li id="technoli2"></li>
+            <li id="technoli3"></li>
+            <li id="technoli4"></li>
+            <li id="technoli5"></li>
+            <li id="technoli6"></li>
+            <li id="technoli7"></li>
+            <li id="technoli8"></li>
+            <li id="technoli9"></li>
+            <li id="technoli10"></li>
+          </ul>
 
-    <div class="row">
-      <div class="col-1">
-         <h1 id="technotitle"></h1>
-         <h2 id="techno"></h2>
-         <ul class="technolist">
-          <li id="technoli1"></li>
-          <li id="technoli2"></li>
-          <li id="technoli3"></li>
-          <li id="technoli4"></li>
-          <li id="technoli5"></li>
-          <li id="technoli6"></li>
-          <li id="technoli7"></li>
-          <li id="technoli8"></li>
-          <li id="technoli9"></li>
-          <li id="technoli10"></li>
-         </ul>
-
+        </div>
+        <div class="col-2">
+          
+        </div>
       </div>
-      <div class="col-2">
-        
-      </div>
-     </div>
-
+    </div>  
      <div class="socialmedia">
         <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
         <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
