--- a/contactme.html
+++ b/contactme.html
@@ -18,13 +18,13 @@
           <li><a href="index.html" id="homenav"></a></li>
           <li><a href="aboutme.html" id="aboutmenav"></a></li>
           <li><a href="projects.html" id="projectsnav"></a></li>
-          <li><a href="contactme.html" id="contactnav"></a></li>
+          <li><a href="contactme.html" id="contactnav" class="activeTab"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
-
+    <div class="content">
     <div class="row">
       <div class="col-1">
          <h1 id="contacttitle"></h1>
@@ -40,7 +40,7 @@
       <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
       <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
      </div>
-
+     </div>
   </div>
 
 
