--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="webicons/logo.png" class="logo">
       <nav>
         <ul id="menuList">
-          <li><a href="index.html" id="homenav"></a></li>
+          <li><a href="index.html" id="homenav" class="activeTab"></a></li>
           <li><a href="aboutme.html" id="aboutmenav"></a></li>
           <li><a href="projects.html" id="projectsnav"></a></li>
           <li><a href="contactme.html" id="contactnav"></a></li>
@@ -25,25 +25,25 @@
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
+    <div class="content">
+      <div class="row">
+        <div class="col-1">
+            <h1 id="welcometitle">Looks like you have JavaScript deactivated. Please activate JavaScript. My entire JavaScript is Open-Source btw. https://github.com/malikwachter/mawacode.de/blob/main/js/lang.js</h1>
+            <h2 id="welcome1"></h2>
+            <p>‎</p>
+            <h2 id="welcome2"></h2>
+        </div>
+        <div class="col-2">
+          <img src="webicons/foto.png" class="fotovonmir">
+        </div>
+        </div>
 
-    <div class="row">
-      <div class="col-1">
-         <h1 id="welcometitle">Looks like you have JavaScript deactivated. Please activate JavaScript. My entire JavaScript is Open-Source btw. https://github.com/malikwachter/mawacode.de/blob/main/js/lang.js</h1>
-         <h2 id="welcome1"></h2>
-         <p>‎</p>
-         <h2 id="welcome2"></h2>
-      </div>
-      <div class="col-2">
-        <img src="webicons/foto.png" class="fotovonmir">
-      </div>
-     </div>
-
-     <div class="socialmedia">
-      <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
-      <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
-      <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
-     </div>
-
+        <div class="socialmedia">
+        <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
+        <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
+        <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
+        </div>
+    </div>
   </div>
 
     <script src="js/lang.js"></script>
