--- a/aboutme/cats.html
+++ b/aboutme/cats.html
@@ -16,7 +16,7 @@
       <nav>
         <ul id="menuList">
           <li><a href="../index.html" id="homenav"></a></li>
-          <li><a href="../aboutme.html" id="aboutmenav"></a></li>
+          <li><a href="../aboutme.html" id="aboutmenav" class="activeTab"></a></li>
           <li><a href="../projects.html" id="projectsnav"></a></li>
           <li><a href="../contactme.html" id="contactnav"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
@@ -24,24 +24,24 @@
       </nav>
       <img src="../webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
-
-    <div class="row">
-      <div class="col-1">
-        <h1 id="catstitle"></h1>
-        <h2 id="cats"></h2>
+    <div class="content">
+      <div class="row">
+        <div class="col-1">
+          <h1 id="catstitle"></h1>
+          <h2 id="cats"></h2>
+        </div>
+        <div class="col-2" id="catpics">
+          <img src="catpics/catpic2.jpg">
+          <img src="catpics/catpic1.jpg">
+        </div>
       </div>
-      <div class="col-2" id="catpics">
-        <img src="catpics/catpic2.jpg">
-        <img src="catpics/catpic1.jpg">
+
+      <div class="socialmedia">
+        <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
+        <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
+        <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
       </div>
-     </div>
-
-     <div class="socialmedia">
-      <a href="https://feddit.de/u/mawacode"><img src="../webicons/lemmy.png"></a>
-      <a rel="me" href="https://hessen.social/@mawacode"><img src="../webicons/mastodon.png"></a>
-      <a href="https://github.com/malikwachter"><img src="../webicons/GitHub.png"></a>
-     </div>
-
+    </div>
   </div>
 
 <script src="../js/lang.js"></script>
