--- a/projects.html
+++ b/projects.html
@@ -17,30 +17,30 @@
         <ul id="menuList">
           <li><a href="index.html" id="homenav"></a></li>
           <li><a href="aboutme.html" id="aboutmenav"></a></li>
-          <li><a href="projects.html" id="projectsnav"></a></li>
+          <li><a href="projects.html" id="projectsnav" class="activeTab"></a></li>
           <li><a href="contactme.html" id="contactnav"></a></li>
           <li><a onclick="langChange()" id="lang"></a></li>
         </ul>
       </nav>
       <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
     </div>
-
-    <div class="row">
-      <div class="col-1">
-         <h1 id="projectstitle"></h1>
-         <h2 id="projects"></h2>
+    <div class="content">
+      <div class="row">
+        <div class="col-1">
+          <h1 id="projectstitle"></h1>
+          <h2 id="projects"></h2>
+        </div>
+        <div class="col-2">
+          <img src="webicons/foto.png" class="fotovonmir">
+        </div>
       </div>
-      <div class="col-2">
-        <img src="webicons/foto.png" class="fotovonmir">
+
+      <div class="socialmedia">
+        <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
+        <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
+        <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
       </div>
-     </div>
-
-     <div class="socialmedia">
-      <a href="https://feddit.de/u/mawacode"><img src="webicons/lemmy.png"></a>
-      <a rel="me" href="https://hessen.social/@mawacode"><img src="webicons/mastodon.png"></a>
-      <a href="https://github.com/malikwachter"><img src="webicons/GitHub.png"></a>
-     </div>
-
+    </div>
   </div>
 
 
