--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -6,6 +6,7 @@
   <title>mawacode.de</title>
   <link href="../css/style.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../webicons/logo.png">
 </head>
 
 <body>
