Change Strings & Add Table in about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,35 @@
             </ul>
         </div>
         <div class="col-2">
-          <img src="webicons/foto.png" class="fotovonmir">
+          <table>
+            <tr>
+              <th id="amth1"></th>
+              <th id="amth2"></th>
+            </tr>
+            <tr>
+              <td id="amtd1"></td>
+              <td id="amtd2"></td>
+            </tr>
+            <tr>
+              <td id="amtd3"></td>
+              <td id="amtd4"></td>
+            </tr>
+            <tr>
+              <td id="amtd5"></td>
+              <td id="amtd6"></td>
+            </tr>
+            <tr>
+              <td id="amtd7"></td>
+              <td id="amtd8"></td>
+            </tr>
+            <tr>
+              <td id="amtd9"></td>
+              <td id="amtd10"></td>
+            </tr>
+            <tr>
+              <td id="amtd11"></td>
+            </tr>
+          </table> 
         </div>
       </div>
     </div>
