Add language button to all pages

--- a/contactme.html
+++ b/contactme.html
@@ -24,7 +24,10 @@
           <li><a onclick="langChange()" id="lang"></a></li>
         </ul>
       </nav>
-      <img src="webicons/menu.png" class="menu-icon" onclick="togglemenu()">
+      <div class="menu-icon">
+        <a onclick="langChange()" id="lang2"></a>
+        <img src="webicons/menu.png" onclick="togglemenu()">
+      </div>
     </div>
     <div class="content">
     <div class="row">
