--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2 id="welcome2"></h2>
         </div>
         <div class="col-2">
-          <img src="webicons/foto.png" class="fotovonmir">
+          <img src="pics/cat_frontpage.png" class="catFront">
         </div>
         </div>
 
