Add PGP Key to contact page

--- a/contactme.html
+++ b/contactme.html
@@ -36,6 +36,27 @@
           <div class="col-1">
             <h1 id="contacttitle"></h1>
             <h2 id="contact"></h2>
+            <a id="popupButton">PGP Key</a>
+
+            <div id="myPopup" class="Popup">
+              <div class="popupContent">
+                <span class="close">&times;</span>
+                <h1>PGP Key</h1>
+                <p>-----BEGIN PGP PUBLIC KEY BLOCK-----<br>
+                  xjMEZb6aVBYJKwYBBAHaRw8BAQdAoOqb346rMo1iB+4uhOk/5P01bMKkz3lz<br> 
+                  f/VkW/nOcq/NKWNvbnRhY3RAbWF3YWNvZGUuZGUgPGNvbnRhY3RAbWF3YWNv<br>
+                  ZGUuZGU+wowEEBYKAD4FgmW+mlQECwkHCAmQF7yxOY8Xq6gDFQgKBBYAAgEC<br>
+                  GQECmwMCHgEWIQTp4k0bwYyQDzuOcfkXvLE5jxerqAAACAgA/AuDAmTI7a1A<br>
+                  FTzz5yg0srbLKiNyApa6Jp6W57U3VrRkAQC8Eh001VNeda9ZI70VKMETCdfA<br>
+                  AD+gELPomlR3CRAaBM44BGW+mlQSCisGAQQBl1UBBQEBB0COggG2IPWv21Qz<br>
+                  1lenwokMxqj3t2e6EWvVCHWnRFVUZwMBCAfCeAQYFgoAKgWCZb6aVAmQF7yx<br>
+                  OY8Xq6gCmwwWIQTp4k0bwYyQDzuOcfkXvLE5jxerqAAA2BMA/0oUUD7XV5wx<br>
+                  MqPmF+ZkVJBLpoYmsGCnInjRbXKjMKVWAQDi3+hfP9I81n1k0BzZ/aEwosoS<br>
+                  V1WPds4rTX6GEzj+Cw==<br>
+                  =rzUE<br>
+                  -----END PGP PUBLIC KEY BLOCK-----</p>
+              </div>
+            </div>
           </div>
           <div class="col-2">
             <a href="https://xkcd.com/1783/"><img src="pics/emails.png" class="comic"></a>
@@ -51,6 +72,7 @@
     </div>
 
     <script src="js/lang.js"></script>
+    <script src="js/popups.js"></script>
 
   </body>
 
