Update Linux info

--- a/aboutme/linux.html
+++ b/aboutme/linux.html
@@ -44,18 +44,21 @@
               <li id="linuxli4"></li>
               <li id="linuxli5"></li>
               <li id="linuxli6"></li>
+              <li id="linuxli7"></li>
             </ul>
 
             <br>
             <h2 id="linux2"></h2>
-            <img src="../pics/linuxdesktop.png" class="neofetch">
+            <a href="../fullrespic.html#desktop"><img src="../pics/desktop-neofetch.png" class="neofetch"></a>
+            <p id="linuxclick1"></p>
+            <br>
             <h2 id="linux2_2"></h2>
-            <img src="../pics/linuxlaptop.png" class="neofetch">
+            <a href="../fullrespic.html#laptop"><img src="../pics/laptop-neofetch.png" class="neofetch"></a>
+            <p id="linuxclick2"></p>
             <br>
             <h2 id="linux3"></h2>
 
             <ul class="technolist">
-              <li id="linuxli7"></li>
               <li id="linuxli8"></li>
               <li id="linuxli9"></li>
               <li id="linuxli10"></li>
