I forgot what I did

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,12 +35,13 @@
         <div class="row">
           <div class="col-1">
             <h1 id="aboutmetitle"></h1>
-            <h2 id="aboutme1"></h2>
             <br>
-            <h2 id="aboutme2"></h2>
+            <p id="aboutme1"></p>
             <br>
-            <h2 id="aboutme3"></h2>
-
+            <p id="aboutme2"></p>
+            <br>
+            <p id="aboutme3"></p>
+            <br>
             <ul id="aboutmelinks">
               <li><a href="aboutme/cats.html" id="aboutmebutton1"></a></li>
               <li><a href="aboutme/linux.html" id="aboutmebutton2"></a></li>
