--- a/aboutme/cats.html
+++ b/aboutme/cats.html
@@ -34,7 +34,8 @@
         <div class="row">
           <div class="col-1">
             <h1 id="catstitle"></h1>
-            <h2 id="cats"></h2>
+            <br>
+            <p id="cats"></p>
           </div>
 
           <div class="col-2" id="catpics">
