--- a/aboutme/techno.html
+++ b/aboutme/techno.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-1">
             <h1 id="technotitle"></h1>
-            <h2 id="techno"></h2>
+            <p id="techno"></p>
 
             <ul class="technolist">
               <li id="technoli1"></li>
