--- a/contactme.html
+++ b/contactme.html
@@ -36,6 +36,7 @@
           <div class="popupContent">
             <span class="close">&times;</span>
             <h1>PGP Key</h1>
+            <br>
             <p>-----BEGIN PGP PUBLIC KEY BLOCK-----<br>
               xjMEZb6aVBYJKwYBBAHaRw8BAQdAoOqb346rMo1iB+4uhOk/5P01bMKkz3lz<br> 
               f/VkW/nOcq/NKWNvbnRhY3RAbWF3YWNvZGUuZGUgPGNvbnRhY3RAbWF3YWNv<br>
@@ -55,7 +56,9 @@
         <div class="row">
           <div class="col-1">
             <h1 id="contacttitle"></h1>
-            <h2 id="contact"></h2>
+            <br>
+            <p id="contact"></p>
+            <br>
             <a id="popupButton">PGP Key</a>
             
           </div>
