--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <div class="row">
           <div class="col-1">
             <h1 id="welcometitle">Looks like you have JavaScript deactivated. Please activate JavaScript. My entire JavaScript is Open-Source btw. https://github.com/malikwachter/mawacode.de/blob/main/js/lang.js</h1>
-            <h2 id="welcome1"></h2>
             <br>
-            <h2 id="welcome2"></h2>
+            <p id="welcome1"></p>
+            <br>
+            <p id="welcome2"></p>
           </div>
           <div class="col-2">
             <img src="pics/cat_frontpage.png" class="catFront">
