--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
         <div class="row">
           <div class="col-1">
             <h1 id="projectstitle"></h1>
-            <h2 id="projects"></h2>
+            <br>
+            <p id="projects"></p>
           </div>
 
           <div class="col-2">
