--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
       <noscript>
         <div id="no-script">
           <h1>Warning!</h1>
-          <p>You have JavaScript deactivated, silly ;) This site doesn't work probably without JavaScript.<br>All my code is Open-Source, check it out if you want to know what script my site uses.</p>
+          <p>You have JavaScript deactivated, silly ;) This site doesn't work properly without JavaScript.<br>All my code is Open-Source, check it out if you want to know what script my site uses.</p>
           <br>
           <a href="https://github.com/malikwachter/mawacode.de/tree/main/js">Link to the source code</a>
         </div>
