Add prjectpage for mawacode.de

--- a/fullrespic.html
+++ b/fullrespic.html
@@ -57,6 +57,7 @@
 
     <script src="js/lang.js"></script>
     <script src="js/popups.js"></script>
+    <script src="js/menu.js"></script>
 
   </body>
 
