--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>mawacode.de</title>
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/projects.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="webicons/logo.png">
   </head>
@@ -44,8 +45,10 @@
         <div class="row">
           <div class="col-1">
             <h1 id="projectstitle"></h1>
-            <br>
-            <p id="projects"></p>
+            <br><br>
+            <div class="projectsbox" >
+                <a href="projects/personalwebsite.html" id="project1"></a>
+            </div>
           </div>
 
           <div class="col-2">
@@ -61,6 +64,7 @@
     </div>
 
     <script src="js/lang.js"></script>
+    <script src="js/menu.js"></script>
 
   </body>
 
