--- a/contactme.html
+++ b/contactme.html
@@ -86,6 +86,7 @@
 
     <script src="js/lang.js"></script>
     <script src="js/popups.js"></script>
+    <script src="js/menu.js"></script>
 
   </body>
 
