--- a/contactme.html
+++ b/contactme.html
@@ -69,6 +69,10 @@
             <p id="contact"></p>
             <br>
             <a id="popupButton">PGP Key</a>
+            <br><br>
+            <ul id="aboutmelinks">
+              <li><a href="legal.html">Impressum & Datenschutz</a></li>
+            </ul>
             
           </div>
           <div class="col-2">
